# Computacion_Grafica_Clion

./: C2_Exercise_10_T2D_Task5.cpp  CMakeLists.txt  README.md  main.cpp  utils.cpp
practicas/: B1P2.cpp  B1T1.cpp  B1T3.cpp  B2T1.cpp  B2T2.cpp  B2T3.cpp  B2T3v2.cpp  B2T4.cpp  B2T4v2.cpp  C2_2D_Square_EBO.cpp  C2_Exercise_1.cpp  C2_Exercise_10_T2D_Task1.cpp  C2_Exercise_10_T2D_Task2.cpp  C2_Exercise_10_T2D_Task3.cpp  C2_Exercise_10_T2D_Task4.cpp  C2_Exercise_11_T3D_Task1.cpp  C2_Exercise_11_T3D_Task2.cpp  C2_Exercise_11_T3D_Task3.cpp  C2_Exercise_11_T3D_Task4.cpp  C2_Exercise_12_VP3D_Task1.cpp  C2_Exercise_12_VP3D_Task2.cpp  C2_Exercise_12_VP3D_Task3.cpp  C2_Exercise_12_VP3D_Task4.cpp  C2_Exercise_2.cpp  C2_Exercise_3.cpp  C2_Exercise_4_Shader_simple.cpp  C2_Exercise_5_ShaderColorTime.cpp  C2_Exercise_6_ShaderVertexAttri.cpp  C2_Exercise_7_SC_Task3.cpp  C2_Exercise_7_SC_Task4.cpp  C2_Exercise_7_ShaderClass.cpp  C2_Exercise_8_TexureIntro.cpp  C2_Exercise_9_TU_Task3.cpp  C2_Exercise_9_TU_Task4.cpp  C2_Exercise_9_TU_Task5.cpp  C2_Exercise_9_TexureUnits.cpp  C3_Exercise_13_Colors_Task1.cpp  C3_Exercise_13_Colors_Task2.cpp  C3_Exercise_13_Colors_Task3.cpp  C3_Exercise_14_MatLMap_Task1.cpp  (+16 more)
practicas/shaders/: B2T3.vs  B2T3_game.fs  B2T4_Phong.fs  B2T4_lightcube.fs  light_cube_game.fs  shader_B1P2.fs  shader_B1P2.vs  shader_B2T1.vs  shader_B2T2.fs  shader_B2T2.vs  shader_B2T3.fs
practicas/textures/: notas.txt.txt
